Revert "UX: Fix alignment in group navigation bar (#15145)"
This reverts commit 01830f9d284f17a0e42ed774c11c1211b4f5063d.

This broke sidebar and could have affected customer themes
on a full enterprise deploy.

--- a/app/assets/stylesheets/common/components/navs.scss
+++ b/app/assets/stylesheets/common/components/navs.scss
@@ -21,12 +21,9 @@
   @extend %nav;
   @extend .clearfix;
 
-  display: flex;
-  flex-direction: row;
-  align-items: stretch;
-
   > li {
     display: flex;
+    float: left;
     margin-right: 0.5em;
 
     > a {
@@ -39,7 +36,7 @@
       min-height: 30px;
       display: flex;
       align-items: center;
-      transition: background-color 0.2s, color 0.2s;
+      transition: background 0.15s;
 
       .d-icon {
         margin-right: 5px;
